[package]
name = "stackdog"
version = "0.1.0"
authors = ["Vasili Pascal <info@try.direct>"]
edition = "2021"

#[package.metadata.docs.rs]
#features = ["openssl", "rustls", "compress", "secure-cookies"]

[dependencies]
actix-web = { version = "3.0.0-beta.3", features=["rustls"] }
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-cors = "0.3.0"
actix-http = "2.1.0"
actix-tls = "3.0.0"
log = "0.4.22"
env_logger = "0.11.3"
serde = "1.0.204"
bigdecimal = "0.4.5"
diesel_migrations = "1.4.0"
serde_derive = "1.0.204"
serde_json = "1.0.120"
dotenv = "0.15.0"
futures = "0.3.30"
failure = "0.1.8"
derive_more = "0.99.17"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
bollard = "0.16.1"
awc = { version = "2.0.3", default-features = false }
open-ssl = { package = "openssl", version = "0.10", optional = true }
rust-tls = { package = "rustls", version = "0.18.0", optional = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
# openssl
openssl = ["actix-tls/openssl", "awc/openssl", "open-ssl"]
# rustls
rustls = ["actix-tls/rustls", "awc/rustls", "rust-tls"]
# content-encoding support
compress = ["actix-http/compress", "awc/compress"]
# sessions feature
secure-cookies = ["actix-http/secure-cookies"]

default = ["compress"]


[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]

[dependencies.diesel]
version = "1.4.6"
features = ["sqlite", "r2d2", "chrono", "numeric"]

[dev-dependencies.diesel]
version = "1.4.6"
features = ["r2d2", "chrono"]