[package]
name = "stackdog"
version = "0.2.0"
authors = ["Vasili Pascal <info@try.direct>"]
edition = "2021"
description = "Security platform for Docker containers and Linux servers"
license = "MIT"
repository = "https://github.com/vsilent/stackdog"
readme = "README.md"
keywords = ["security", "docker", "containers", "ebpf", "firewall"]
categories = ["security", "development-tools"]

[workspace]
members = [
    ".",
    "ebpf",
]

[dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1"
thiserror = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
actix-rt = "2"

# Database
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"

# eBPF (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.12"
aya-obj = "0.1"

# Firewall (Linux only)
netlink-packet-route = "0.17"
netlink-sys = "0.8"

# ML (optional)
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }

# Docker
bollard = "0.16"

[features]
default = []
ml = ["candle-core", "candle-nn"]
ebpf = []

[dev-dependencies]
# Testing
tokio-test = "0.4"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false
